Fix FloatingFooter partially visible while hidden
Could see delete button through iOS Safari URL bar (transparent/blurred), could briefly see when viewport changed size (happens on iOS Firefox when UI is minimized/expanded)

--- a/src/main.css
+++ b/src/main.css
@@ -181,9 +181,9 @@ html[data-theme="light"] .pot-size-selected::placeholder {
 }
 
 .floating-footer-hidden {
-    @apply translate-y-24 scale-90;
+    @apply translate-y-24 scale-90 opacity-0;
 }
 
 .floating-footer-visible {
-    @apply translate-y-0 scale-100;
+    @apply translate-y-0 scale-100 opacity-100;
 }
